--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <button type="button" class="hidden login" id="login">Sign In</button>
                 </div>
                 <div class="toggle-panel toggle-right">
-                    <h1>Hello, Friend!</h1>
+                    <h1>Hello, User!</h1>
                     <p>Enter your details to register</p>
                     <button type="button" class="hidden register" id="register">Sign Up</button>
                 </div>
